--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@
   color: white;
   /* border: 40px solid gray;   */
   border-radius: 35px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
+    rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
 .App-link {
