--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,6 +1,7 @@
 .profile-img {
-    height: 300px;
-    width: 300px;
-    border-radius: 300px;
-    border: 40px solid white;
+    height: 350px;
+    width: 350px;
+    border-radius: 350px;
+    border: 15px solid white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
