--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,8 +1,33 @@
 .profile-img {
-    height: 350px;
-    width: 350px;
-    border-radius: 350px;
-    border: 15px solid white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  height: 350px;
+  width: 350px;
+  border-radius: 350px;
+  border: 15px solid white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+.wrapper {
+  /*This part is important for centering*/
+  display: flex;
+}
+
+.typing-demo {
+  width: 290px;
+  animation: typing 3s steps(22), blink 0.5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  animation-iteration-count: infinite;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
