--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -99,4 +99,34 @@
   }
 }
 
+/*-------------------------------------------------------------------------------*\
+  ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+\*-------------------------------------------------------------------------------*/
 
+@media all and (max-width: 688px) and (orientation: portrait) {
+  .profile-img {
+    height: 160px;
+    width: 160px;
+    border: 5px solid white;
+  }
+
+  .res-banner-img {
+    margin-bottom: 40px;
+    /* border: 1px red solid; */
+  }
+
+  .text {
+    width: 200px;
+  }
+  .res-names {
+    display: grid;
+    justify-content: center;
+  }
+  .res-name {
+    text-align: center;
+  }
+  .res-designation {
+    font-size: 14px;
+    text-align: center;
+  }
+}
