--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -114,6 +114,11 @@
     margin-bottom: 40px;
     /* border: 1px red solid; */
   }
+  .res-banner-imgdiv {
+    display: flex;
+    justify-items: center;
+    border: 1px red solid;
+  }
   .text {
     width: 200px;
   }
