--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -5,7 +5,9 @@
   border: 15px solid white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-
+.res-top-banner {
+  margin-top: 40px;
+}
 .text {
   position: relative;
   overflow: hidden;
@@ -105,20 +107,19 @@
 
 /* @media all and (max-width: 688px) and (orientation: portrait) { */
 @media all and (max-width: 688px) {
+  .res-top-banner {
+    margin-top: 0px;
+  }
   .profile-img {
     height: 160px;
     width: 160px;
     border: 5px solid white;
   }
   .res-banner-img {
-    margin-bottom: 40px;
-    /* border: 1px red solid; */
-  }
-  .res-banner-imgdiv {
-    display: flex;
-    justify-items: center;
+    margin-bottom: 20px;
     border: 1px red solid;
   }
+
   .text {
     width: 200px;
   }
