--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -6,6 +6,9 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .res-top-banner {
+  margin-top: 70px;
+}
+.res-banner-intro {
   margin-top: 40px;
 }
 .text {
@@ -142,5 +145,6 @@
   .res-banner-intro {
     padding-left: 20px;
     padding-right: 20px;
+    margin-top: 10px;
   }
 }
