--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -2,3 +2,13 @@
   width: 42px;
   height: 42px;
 }
+
+/*-------------------------------------------------------------------------------*\
+  ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+\*-------------------------------------------------------------------------------*/
+
+@media all and (max-width: 688px) {
+  .res-skills-list li {
+    font-size: 12px;
+  }
+}
