--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -2,7 +2,9 @@
   width: 42px;
   height: 42px;
 }
-
+.res-skills {
+  margin-top: 20px;
+}
 /*-------------------------------------------------------------------------------*\
   ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 \*-------------------------------------------------------------------------------*/
@@ -10,5 +12,8 @@
 @media all and (max-width: 688px) {
   .res-skills-list li {
     font-size: 12px;
+  }
+  .res-skills {
+    margin-top: 0px;
   }
 }
