--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -119,7 +119,9 @@
     border: 5px solid white;
   }
   .res-banner-img {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+    /* border: 2px red solid; */
   }
 
   .text {
