mobile-project-cards

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -20,3 +20,19 @@
   display: none;
 }
 
+.res-mobile-cards {
+  display: none;
+}
+
+/*-------------------------------------------------------------------------------*\
+  ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+\*-------------------------------------------------------------------------------*/
+
+@media all and (max-width: 688px) {
+  .res-carousel {
+    display: none;
+  }
+  .res-mobile-cards {
+    display: block;
+  }
+}
