--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -1,3 +1,25 @@
 .blogs {
-    height: 100vh;
+  height: 100vh;
+}
+.res-blog-top {
+  margin-top: 50px;
+}
+
+.res-blog-header {
+    font-size: 55px;
+    font-weight: lighter;
+  }
+
+/*-------------------------------------------------------------------------------*\
+  ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+\*-------------------------------------------------------------------------------*/
+
+@media all and (max-width: 688px) {
+  .res-blog-top {
+    margin-top: 20px;
+  }
+  .res-blog-header {
+    font-size: 20px;
+    font-weight: lighter;
+  }
 }
