--- a/src/Components/Blogs/Blogs.css
+++ b/src/Components/Blogs/Blogs.css
@@ -7,6 +7,10 @@
   font-weight: lighter;
 }
 
+.cardText {
+  font-weight: bolder;
+}
+
 /*-------------------------------------------------------------------------------*\
   ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 \*-------------------------------------------------------------------------------*/
