--- a/src/Components/Qualifications/Qualifications.css
+++ b/src/Components/Qualifications/Qualifications.css
@@ -1,26 +1,40 @@
 .qualifications {
-    height: 100vh;
-  }
-  .res-qualifications-top {
-    margin-top: 50px;
-  }
-  
-  .res-qualifications-header {
-      font-size: 55px;
-      font-weight: lighter;
-    }
-  
-  /*-------------------------------------------------------------------------------*\
+  height: 100vh;
+}
+.res-qualifications-top {
+  margin-top: 50px;
+}
+
+.res-qualifications-header {
+  font-size: 55px;
+  font-weight: lighter;
+}
+
+.q-logos {
+  height: 150px;
+  width: 150px;
+  border-radius: 150px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.q-logos img {
+  height: 180px;
+  width: 180px;
+}
+
+/*-------------------------------------------------------------------------------*\
     ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
   \*-------------------------------------------------------------------------------*/
-  
-  @media all and (max-width: 688px) {
-    .res-qualifications-top {
-      margin-top: 20px;
-    }
-    .res-qualifications-header {
-      font-size: 20px;
-      font-weight: lighter;
-    }
+
+@media all and (max-width: 688px) {
+  .res-qualifications-top {
+    margin-top: 20px;
   }
-  
+  .res-qualifications-header {
+    font-size: 20px;
+    font-weight: lighter;
+  }
+}
