--- a/src/Components/Qualifications/Qualifications.css
+++ b/src/Components/Qualifications/Qualifications.css
@@ -22,6 +22,11 @@
   width: 180px;
 }
 
+.q-logos-align {
+  display: flex;
+  justify-content: end;
+}
+
 /*-------------------------------------------------------------------------------*\
     ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
   \*-------------------------------------------------------------------------------*/
@@ -33,5 +38,9 @@
   .res-qualifications-header {
     font-size: 20px;
     font-weight: lighter;
+  }
+  .q-logos-align {
+    display: flex;
+    justify-content: center;
   }
 }
