q-fixing-text-mobile

--- a/src/Components/Qualifications/Qualifications.css
+++ b/src/Components/Qualifications/Qualifications.css
@@ -43,4 +43,11 @@
     display: flex;
     justify-content: center;
   }
+  .q-text {
+    text-align: center;
+    font-size: 20px;
+  }
+  .q-logos {
+    margin-bottom: 20px;
+  }
 }
