--- a/src/Components/Qualifications/Qualifications.css
+++ b/src/Components/Qualifications/Qualifications.css
@@ -27,6 +27,10 @@
   justify-content: end;
 }
 
+.q-text {
+  width: 500px;
+}
+
 /*-------------------------------------------------------------------------------*\
     ///////////////////////////// media query \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
   \*-------------------------------------------------------------------------------*/
@@ -46,6 +50,7 @@
   .q-text {
     text-align: center;
     font-size: 16px;
+    width: 100%;
   }
   .q-logos {
     margin-bottom: 20px;
